# remby

./: Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
.github/workflows/: build.yml
.mimocode/plans/: 1782079342982-lucky-meadow.md
crates/remby/: Cargo.toml
crates/remby-core/: Cargo.toml
crates/remby-core/src/: config.rs  emby.rs  lib.rs  mpv.rs  theme.rs
crates/remby-gui/: Cargo.toml
crates/remby-gui/src/: app.rs  image_loader.rs  loaders.rs  main.rs  state.rs  theme_adapter.rs
crates/remby-gui/src/views/: browser.rs  favorites.rs  home.rs  libraries.rs  login.rs  mod.rs  player.rs  series.rs  settings.rs
crates/remby-gui/src/views/components/: badge.rs  loading.rs  media_card.rs  mod.rs  progress.rs  search_bar.rs  sidebar.rs  toast.rs
crates/remby/src/: app.rs  main.rs  ui.rs
docs/compose/plans/: 2026-06-21-library-browser.md  2026-06-23-theme-system.md  2026-06-25-gui-redesign.md
docs/compose/reports/: library-browser.md  theme-system.md
docs/compose/specs/: 2026-06-23-theme-system-design.md  2026-06-25-gui-redesign.md
src/: app.rs  config.rs  crypto.rs  emby.rs  help.rs  i18n.rs  main.rs  mpv.rs  theme.rs  ui.rs
