[package]
name = "remby"
version = "0.1.0"
edition = "2021"
description = "A lightweight Emby client with mpv playback"
build = "build.rs"

[[bin]]
name = "remby"
path = "src/main.rs"

[build-dependencies]
winres = "0.1"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
dirs = "6"
url = "2"
uuid = { version = "1", features = ["v4"] }
hostname = "0.4"
futures = "0.3"
aes-gcm = "0.10"
rand = "0.8"
phf = { version = "0.14", features = ["macros"] }
unicode-width = "0.2"

[profile.release]
debug = 0
lto = true
strip = true
codegen-units = 1
