[package]
name = "remby-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "rustls", "query"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.30"
ratatui-textarea = "0.9"
anyhow = "1"
dirs = "6"
url = "2"
uuid = { version = "1", features = ["v4"] }
hostname = "0.4"
futures = "0.3"
aes-gcm = "0.10"
rand = "0.8"
phf = { version = "0.14", features = ["macros"] }
unicode-width = "0.2"
