[package]
name = "remby-gui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "remby-gui"
path = "src/main.rs"

[dependencies]
remby-core = { path = "../remby-core" }
gpui = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe", features = ["font-kit"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
