[package]
name = "remby"
version = "0.1.0"
edition = "2021"
description = "A lightweight Emby client with mpv playback"
build = "../../build.rs"

[[bin]]
name = "remby"
path = "src/main.rs"

[build-dependencies]
winres = "0.1"

[dependencies]
remby-core = { path = "../remby-core" }
tokio = { version = "1", features = ["full"] }
ratatui = "0.30"
ratatui-textarea = "0.9"
crossterm = { version = "0.29", features = ["event-stream"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
unicode-width = "0.2"
futures = "0.3"
dirs = "6"
